--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,272 @@
-.footer{
+
+
+.footer {
     color: #fff;
     background-color: #1f2937;
     height: 75px;
     padding-left: 650px;
     padding-top: 50px;
 }
-.top{
+
+.top {
     background-color: #1f2937;
     height: 400px;
-    width: 1500px;
-   
+    width: 100%;
+
 }
-.mid1{
+
+.mid1 {
     background-color: #ffff;
-    height: 200px;
-    width: 1500px;
+    height: 350px;
+    width: 100%;
+    
 }
-.mid2{
+
+.mid2 {
     background-color: #E5E7EB;
-    height: 200px;
-    width: 1500px;
+    height: 350px;
+    width: 100%;
 }
-.mid3{
+
+.mid3 {
     background-color: #ffff;
-    height: 200px;
-    width: 1500px;
+    height: 250px;
+    width: 100%;
 }
-.bluebox{
+
+.bluebox {
     background-color: #3882F6;
-   margin-left: 300px;
-   margin-top: 70px;
+    margin-left: 300px;
+    margin-top: 90px;
     height: 150px;
     width: 900px;
-   
+    border-radius: 5px;
+    display: flex;
+
+
 }
-.header{
+
+.header {
     background-color: #1f2937;
     height: 75px;
-    width: 1500px;
+    width: 100%;
     display: flex;
 
 }
-#headerlogo{
+
+#headerlogo {
     color: #fff;
     margin-left: 200px;
     font-weight: bold;
     font: size 24px;
     margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#header1{
+
+#header1 {
     color: #fff;
-    margin-left: 600px;
+    margin-left: 390px;
     font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#header2{
+
+#header2 {
     color: #fff;
     margin-left: 50px;
     font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#header3{
+
+#header3 {
     color: #fff;
     margin-left: 50px;
     font-size: 18px;
-   
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
-.topmain{
+
+.topmain {
     display: flex;
     margin-left: 200px;
-    
+
 }
-#buttonid{
+
+#buttonid {
     background-color: #3882F6;
     color: #fff;
+    height: 35px;
+    width: 120px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
 }
-#head1{
+
+#head1 {
     color: #fff;
     font-size: 48px;
-    margin-top: 100px;
+    margin-top: 70px;
     text-align: left;
     padding-bottom: 0%;
-    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
-#para1{
+
+#para1 {
     color: #fff;
     padding-top: 0%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: lighter;
 }
-#imgbox{
+
+#imgbox {
     margin-left: 500px;
-    border: #E5E7EB;
-    background-color: #E5E7EB;
+    background-color: rgba(200, 200, 200, 0.526);
+    color: #E5E7EB;
     height: 225px;
-    width: 500px;
-    margin-top: 100px;
+    width: 600px;
+    margin-top: 70px;
+    margin-left: 50px;
+}
+
+#imgtxt {
     margin-left: 150px;
+    margin-top: 100px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#randominfo {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-left: 550px;
+}
+
+.boxes {
+    display: flex;
+
+}
+
+#box1 {
+    margin-left: 360px;
+    margin-top: 30px;
+    width: 150px;
+    height: 150px;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #3882F6;
+    border-radius: 15px;
+}
+
+#box2 {
+    margin-left: 35px;
+    margin-top: 30px;
+    width: 150px;
+    height: 150px;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #3882F6;
+    border-radius: 15px;
+}
+
+#box3 {
+    margin-left: 35px;
+    margin-top: 30px;
+    width: 150px;
+    height: 150px;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #3882F6;
+    border-radius: 15px;
+}
+
+#box4 {
+    margin-left: 35px;
+    margin-top: 30px;
+    width: 150px;
+    height: 150px;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #3882F6;
+    border-radius: 15px;
+}
+
+#textunder {
+
+    display: flex;
+}
+
+#text1 {
+    margin-left: 370px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#text2 {
+    margin-left: 52px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#text3 {
+    margin-left: 52px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#text4 {
+    margin-left: 52px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.inspireq{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    font-size: 26px;
+    padding-top: 100px;
+    padding-left: 450px;
+
+}
+.thor{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-left: 850px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.bluesign1{
+    background-color:#3882F6;
+    color:#fff;
+    height: 25px;
+    width: 60px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: #fff;
+    font-size: 15px;
+    font-weight: bold;  
+    margin-top: 50px;
+    margin-left: 140px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-left: 40px;
+    padding-right: 30px;
+    padding-top: 10px;
+}
+.actiontime{
+padding-top: 50px;
+padding-left: 90px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color: #fff;
+}
+.overthere{
+    padding-top: 2px;
+    padding-left: 90px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color: #fff;
+font-weight: lighter;
 }
